--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "darkaonline/l5-swagger": "^8.6",
         "laravel/framework": "^11.31",
         "laravel/passport": "^12.0",
+        "laravel/socialite": "^5.18",
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
