--- a/package.json
+++ b/package.json
@@ -5,9 +5,6 @@
         "build": "vite build",
         "dev": "vite"
     },
-    "dependencies": {
-        "vite": "^6.0.11"
-    },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "alpinejs": "^3.4.2",
@@ -16,6 +13,7 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.4.31",
-        "tailwindcss": "^3.1.0"
+        "tailwindcss": "^3.1.0",
+        "vite": "^6.0.11"
     }
 }
